Fix T65770: File Browser missing "Sidebar" in View menu